@@ -17,6 +17,8 @@
 11. Use javascript code to play saved random mixes.
 12. Add bottom padding to various fullscreen dialogs.
 13. Pass rold_id to works command.
+14. If using large (greater than 20px) bottom padding in desktop layout, then
+    don't expand now-playing bar image - just add padded area.
 
 5.4.1
 -----
